<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/img_welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/img_registr" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img_welcom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/input_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="42dp"
            android:background="@drawable/input"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="@string/pas"
            android:inputType="text"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="8dp"
            android:shadowColor="@color/black"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/v"
        android:textColor="@color/gray"
        android:textSize="15sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/poppins_regular"
        android:onClick="urireg"
        android:paddingVertical="10dp"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/text_reg"
        android:textSize="18sp"
        app:backgroundTint="@color/light_gray"
        app:cornerRadius="7dp" />


</RelativeLayout>